src/objects/Account_Payroll__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Payrolls</relationshipLabel>
        <relationshipName>Account_Payrolls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>employees_number__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payroll_amount__c</fullName>
        <label>Payroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payroll_quota_amount__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>payroll_var_month_amount__c</fullName>
        <label>Weekly variation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>period__c</fullName>
        <formula>CASE(MONTH(year_month_day_date__c),1, $Label.Month1ShortName ,2,$Label.Month2ShortName,3,$Label.Month3ShortName,4,$Label.Month4ShortName,5,$Label.Month5ShortName,6,$Label.Month6ShortName,7,$Label.Month7ShortName,8,$Label.Month8ShortName,9,$Label.Month9ShortName,10,$Label.Month10ShortName,11,$Label.Month11ShortName,$Label.Month12ShortName) + &apos; &apos; + RIGHT(TEXT(YEAR(year_month_day_date__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qualified_payroll_amount__c</fullName>
        <label>Qualified Payroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_date_within_last_3_months__c</fullName>
        <formula>IF(  year_month_day_date__c &gt; ADDMONTHS(  account_id__r.account_payroll_last_date__c  ,-3) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is date within last 3 months?</label>
        <type>Checkbox</type>
    </fields>
    <label>Pago de Haberes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>period__c</columns>
        <columns>employees_number__c</columns>
        <columns>payroll_amount__c</columns>
        <columns>payroll_quota_amount__c</columns>
        <columns>qualified_payroll_amount__c</columns>
        <columns>payroll_var_month_amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APR-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos de Haberes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>